added tickets_attributes and fix authorization

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,3 +1,6 @@
+<td><%= current_user.email %></td>
+
+<br>
 <h1>Booking Details</h1>
 <h2><%=@booking.flight.flight_detail%></h2>
 <p><strong>Passengers</strong></p>
