--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,3 +1,9 @@
+<% if user_signed_in? %>
+  <%= link_to current_user.email, user_path(:id) %>
+  <%= link_to 'Logout', destroy_user_session_path, data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
+<%else%>
+  <%= link_to "Sign in", new_user_session_path%>
+<% end %>
 
 <%= render partial: 'search_form'%>
 
@@ -11,8 +17,11 @@
         <%= f.radio_button + f.label %><br>
       <% end %> 
       <%= form.hidden_field :number_of_seats, value: params[:number_of_seats] %>
-      <%= submit_tag "Book Flight" %>
+      <% if user_signed_in? %>
+        <%= submit_tag "Book Flight" %>
+      <%else%>
+        <td>Please <%= link_to "Sing in", new_user_session_path%> to book your flight</td>
+      <% end %>
     <%end%>
   <% end %>
-
 <% end %>
